populate default values,ib,gr search

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -5,3 +5,5 @@ appDescription=App Description
 #XBUT footer buttons
 Save= Save
 Cancel = Cancel
+Aircraft = Aircraft
+NLP = Normal Line Position Work Center
