--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,5 +1,5 @@
 title=NC Creation
-appTitle=NC Creation
+appTitle=ZQM_NCR
 appDescription=App Description
 
 #XBUT footer buttons
@@ -7,3 +7,215 @@ Save= Save
 Cancel = Cancel
 Aircraft = Aircraft
 NLP = Normal Line Position Work Center
+
+#XTIT Main view
+NcCreateCopy=NC Create / Copy 
+Nc=NC Number
+NcType = NC Type
+InwhichArea = In Which Area
+Subcategory = Sub Category
+Binlocation = Bin Location
+Aircraftnumber = Aircraft Number
+
+#XTIT Add discrepency fragment
+order = Order
+
+#XTIT Aircraft Value Help
+SelectAircraftNum = Select Aircraft Number
+
+#XTIT AircraftVH
+AirCraft = Aircraft
+
+#XTIT ASNNoFBValueHelp
+Title = ASN Number
+
+#XTIT BinAreaValueHelp
+SelectBinArea = Select Bin Area
+
+#XTIT componentf4help
+Title = Serial No
+SerianNo = Serial Numbers
+status = Status
+userstatus = User Status
+Ref = Refernce
+#XBUT footer buttons
+Close = Close
+OK = Ok
+
+#XTIT copydiscrepancy
+copydiscrepancy = Copy Discrepancy
+
+#XTIT CopyNc
+Title = Copy NC
+Nc = NC Number
+NCtype = NC Type
+NcDesc = NC Description
+SerialNum = Serial Number
+AirCraftNo = Aircraft No.
+#XBUT footer buttons
+Close = Close
+
+#XTIT DiscrepNoFBValueHelp
+DiscrepencyNum = Discrepancy Number
+
+#XTIT DropPointVH
+DroppointVH = Drop Point
+
+#XTIT f4category
+POSearch = Production Order Search
+plant = Plant
+order = Order
+ProdSeq = Prod Seq.
+Prodorderitem = Prod Order Item
+type = Type
+parent = Parent
+NLP = NLP
+Startdate = Start Date
+EndData = End Date
+IssueQty = Issue Qty.
+#XBUT footer buttons
+Close = Close
+
+#XTIT GrValueHelp
+GRS = Goods Receipt Search
+GRId = GR ID
+GRItem = GR Item
+Purchaseorder = Purchase Order
+Inbounddelivery = Inbound Delivery
+PartNum = Part Number
+#XBUT footer buttons
+Close = Close
+
+#XTIT InbDelFBValueHelp
+InboundDelivery = Inbound Delivery
+
+#XTIT Lotnum
+Title = Select Lot Number
+SelectLotNum = Select Lot Number
+#XBUT footer buttons
+SelectandProceed = Select and Proceed
+
+#XTIT LotnumVH
+SelectLotNum = Select Lot Number
+
+
+#XTIT NCCreatedBy
+Title = NC Created By
+WorkcenterCategory = Work Center Category
+plant = Plant
+Workcenter = Work Center
+Shortdescription = Short Description
+language = Language
+#XBUT footer buttons
+Close = Close
+
+#XTIT NCDetectedAt
+Title = NC Detected At
+WorkcenterCategory = Work Center Category
+plant = Plant
+Workcenter = Work Center
+Shortdescription = Short Description
+language = Language
+#XBUT footer buttons
+Close = Close
+
+
+#XTIT NcNoFBValueHelp
+Title = NC Number
+
+#XTIT NcNumFBVH
+Title = Select NC Number
+
+#XTIT NLP
+Title = NLP
+
+#XTIT notespopup
+Workgroup1 = Work Group1
+Workgroup2 = Work Group2
+Workgroup3 = Work Group3
+Workgroup4 = Work Group4
+
+#XTIT partno
+Title = Select Part Number
+Partnum = Part No
+Partdesc = Part Description
+#XBUT footer buttons
+Close = Close
+
+#XTIT PartNoFBValueHelp
+Title = Part No
+
+#XTIT PlantFBVH
+Title = Plant
+
+#XTIT PoValueHelp
+Title = Purchase Order Search
+#XBUT footer buttons
+Close = Close
+
+#XTIT ProductCodeVH
+Title = Product Code
+
+#XTIT ProductionOrderVH
+Title = Production Order
+
+#XTIT PurOrdFBValueHelp
+Title = Purchase Order Number
+
+#XTIT ReferenceNCVH
+Title = Reference NC
+
+#XTIT RMANoFBValueHelp
+Title = RMA Number
+
+#XTIT selectPartnerCode
+Title = Select Partner Code
+Productcode = Product Code
+ProdcodeDesc = Product Code Description
+Partnercode = Partner Code
+PartnercodeDesc = Partner Code Description
+Parentpartnum = Parent Part No
+PartNumDesc = Part No Description
+ProductSequencefrom = Product Sequence From
+Productsequenceto = Product Sequence To
+
+#XTIT SerialNoVHDialog
+Title = Serial No
+
+#XTIT SerNumFBVH
+SelectSerialNumber = Select Serial Number
+
+#XTIT SSCValueHelp
+Title = Select SAP Supplier Code
+
+#XTIT SupersededByVH
+Title = Superseded By
+
+#XTIT SupersedesNCVH
+Title = Supersedes NC
+
+#XTIT TraceabilityVHDialog
+Title = Traceability No
+
+#XTIT WorkCenterCategoryFBVH
+Title = Work Center Category
+
+#XTIT WorkCenterFBVH
+Title = Work Center
+
+#XTIT WorkInstructionVH
+Title = Work Instruction
+
+#XTIT Main controller
+ProductionorderWRNodata = No data found.! Please try to search using filter bar fields provided.!
+Title = No matching order found
+WRSpecifydata = Do you want to specify a Partner Code for this Part?
+Title = No matching order found
+LotNumWR = Please select Lot Number to continue!!
+WorkInstrcutionWR = Entered Value exists for Work Instruction
+WRWorkinstructiondoesnotexist = Entered Value does not exist for Work Instruction
+WRenteredValue = Entered Value does not exist for Work Instruction
+WRMAndatoryFields = Please Select Mandtory Fields
+WRSelectSubCategory = Please Select Sub Category
+WREnterValueinArea = Please enter a value in In Which Area
+
