--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -55,6 +55,9 @@ AirCraftNo = Aircraft No.
 #XBUT footer buttons
 Close = Close
 
+#XTIT DefectCodeValueHelp
+Title = Select Defect Code 
+
 #XTIT DiscrepNoFBValueHelp
 DiscrepencyNum = Discrepancy Number
 
@@ -64,7 +67,7 @@ DroppointVH = Drop Point
 #XTIT f4category
 POSearch = Production Order Search
 plant = Plant
-order = Order
+Order = Order
 ProdSeq = Prod Seq.
 Prodorderitem = Prod Order Item
 type = Type
@@ -142,6 +145,9 @@ Partdesc = Part Description
 #XBUT footer buttons
 Close = Close
 
+#XTIT PartNoDiscrepancyVH
+Title = Part No
+
 #XTIT PartNoFBValueHelp
 Title = Part No
 
@@ -150,6 +156,15 @@ Title = Plant
 
 #XTIT PoValueHelp
 Title = Purchase Order Search
+POID = PO ID
+POItem = PO Item
+ASNNum = ASN Number
+InbDel = Inbound Delivery
+PartNum = Part Number
+Partname = Part Name
+NCNum = NC Number
+DiscrepancyNum = Discrepancy Number
+RMANum = RMA Number
 #XBUT footer buttons
 Close = Close
 
