Header Data Issue Fixes

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -195,7 +195,7 @@ ProductSequencefrom = Product Sequence From
 Productsequenceto = Product Sequence To
 
 #XTIT SerialNoVHDialog
-Title = Serial No
+SerialNoDialogTitle = Serial No
 
 #XTIT SerNumFBVH
 SelectSerialNumber = Select Serial Number
