--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -27,13 +27,13 @@ SelectAircraftNum = Select Aircraft Number
 AirCraft = Aircraft
 
 #XTIT ASNNoFBValueHelp
-Title = ASN Number
+ASNNumberTitle = ASN Number
 
 #XTIT BinAreaValueHelp
 SelectBinArea = Select Bin Area
 
 #XTIT componentf4help
-Title = Serial No
+SerialNumTitle = Serial No
 SerianNo = Serial Numbers
 status = Status
 userstatus = User Status
@@ -46,7 +46,7 @@ OK = Ok
 copydiscrepancy = Copy Discrepancy
 
 #XTIT CopyNc
-Title = Copy NC
+CopyNcTitle = Copy NC
 Nc = NC Number
 NCtype = NC Type
 NcDesc = NC Description
@@ -56,7 +56,7 @@ AirCraftNo = Aircraft No.
 Close = Close
 
 #XTIT DefectCodeValueHelp
-Title = Select Defect Code 
+SelectDefectCodeTitle = Select Defect Code 
 
 #XTIT DiscrepNoFBValueHelp
 DiscrepencyNum = Discrepancy Number
@@ -92,8 +92,11 @@ Close = Close
 #XTIT InbDelFBValueHelp
 InboundDelivery = Inbound Delivery
 
+#XTIT LiabilityValueHelp
+LiabilityNum = Liability Number
+
 #XTIT Lotnum
-Title = Select Lot Number
+SelectLotNumTitle = Select Lot Number
 SelectLotNum = Select Lot Number
 #XBUT footer buttons
 SelectandProceed = Select and Proceed
@@ -101,9 +104,8 @@ SelectandProceed = Select and Proceed
 #XTIT LotnumVH
 SelectLotNum = Select Lot Number
 
-
 #XTIT NCCreatedBy
-Title = NC Created By
+NCCreatedByTitle = NC Created By
 WorkcenterCategory = Work Center Category
 plant = Plant
 Workcenter = Work Center
@@ -113,7 +115,7 @@ language = Language
 Close = Close
 
 #XTIT NCDetectedAt
-Title = NC Detected At
+NCDetectedAtTitle = NC Detected At
 WorkcenterCategory = Work Center Category
 plant = Plant
 Workcenter = Work Center
@@ -122,15 +124,15 @@ language = Language
 #XBUT footer buttons
 Close = Close
 
-
 #XTIT NcNoFBValueHelp
-Title = NC Number
+
+NCNumTitle = NC Number
 
 #XTIT NcNumFBVH
-Title = Select NC Number
+SelectNCNumTitle = Select NC Number
 
 #XTIT NLP
-Title = NLP
+NLPTitle = NLP
 
 #XTIT notespopup
 Workgroup1 = Work Group1
@@ -139,23 +141,23 @@ Workgroup3 = Work Group3
 Workgroup4 = Work Group4
 
 #XTIT partno
-Title = Select Part Number
+SelectPartNumTitle = Select Part Number
 Partnum = Part No
 Partdesc = Part Description
 #XBUT footer buttons
 Close = Close
 
 #XTIT PartNoDiscrepancyVH
-Title = Part No
+PartNumTitle = Part No
 
 #XTIT PartNoFBValueHelp
-Title = Part No
+PartNoTitle = Part No
 
 #XTIT PlantFBVH
-Title = Plant
+PlantTitle = Plant
 
 #XTIT PoValueHelp
-Title = Purchase Order Search
+POSearchTitle = Purchase Order Search
 POID = PO ID
 POItem = PO Item
 ASNNum = ASN Number
@@ -169,22 +171,22 @@ RMANum = RMA Number
 Close = Close
 
 #XTIT ProductCodeVH
-Title = Product Code
+ProductCodeTitle = Product Code
 
 #XTIT ProductionOrderVH
-Title = Production Order
+ProductionOrderTitle = Production Order
 
 #XTIT PurOrdFBValueHelp
-Title = Purchase Order Number
+PurchaseOrderNumTitle = Purchase Order Number
 
 #XTIT ReferenceNCVH
-Title = Reference NC
+RefNCTitle = Reference NC
 
 #XTIT RMANoFBValueHelp
-Title = RMA Number
+RMANumTitle = RMA Number
 
 #XTIT selectPartnerCode
-Title = Select Partner Code
+SelectPartnerCodeTitle = Select Partner Code
 Productcode = Product Code
 ProdcodeDesc = Product Code Description
 Partnercode = Partner Code
@@ -195,37 +197,38 @@ ProductSequencefrom = Product Sequence From
 Productsequenceto = Product Sequence To
 
 #XTIT SerialNoVHDialog
-SerialNoDialogTitle = Serial No
+SerialNumTitle = Serial No
 
 #XTIT SerNumFBVH
 SelectSerialNumber = Select Serial Number
 
 #XTIT SSCValueHelp
-Title = Select SAP Supplier Code
+SelectSAPSuppCodeTitle = Select SAP Supplier Code
 
 #XTIT SupersededByVH
-Title = Superseded By
+SupersededbyTitle = Superseded By
 
 #XTIT SupersedesNCVH
-Title = Supersedes NC
+SupersedesNCTitle = Supersedes NC
 
 #XTIT TraceabilityVHDialog
-Title = Traceability No
+TraceabilityNumTitle = Traceability No
 
 #XTIT WorkCenterCategoryFBVH
-Title = Work Center Category
+WorkCenterCatTitle = Work Center Category
 
 #XTIT WorkCenterFBVH
-Title = Work Center
+WorkcenterTitle = Work Center
 
 #XTIT WorkInstructionVH
-Title = Work Instruction
+WorkInstructionTitle = Work Instruction
+
 
 #XTIT Main controller
 ProductionorderWRNodata = No data found.! Please try to search using filter bar fields provided.!
-Title = No matching order found
+MessagematchingPart = No matching order found
 WRSpecifydata = Do you want to specify a Partner Code for this Part?
-Title = No matching order found
+MessagematchingOrder = No matching order found
 LotNumWR = Please select Lot Number to continue!!
 WorkInstrcutionWR = Entered Value exists for Work Instruction
 WRWorkinstructiondoesnotexist = Entered Value does not exist for Work Instruction
@@ -233,4 +236,5 @@ WRenteredValue = Entered Value does not exist for Work Instruction
 WRMAndatoryFields = Please Select Mandtory Fields
 WRSelectSubCategory = Please Select Sub Category
 WREnterValueinArea = Please enter a value in In Which Area
+
 
