--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -237,4 +237,12 @@ WRMAndatoryFields = Please Select Mandtory Fields
 WRSelectSubCategory = Please Select Sub Category
 WREnterValueinArea = Please enter a value in In Which Area
 
-
+#XTIT selectPartnerCode fragment
+Productcode = Product code
+ProdcodeDesc = Prodcode Description
+Partnercode = Partner Code
+PartnercodeDesc= Partner Code Description
+Parentpartnum= Parent Part Number
+PartNumDesc= Part Number Description
+ProductSequencefrom= Product Sequence From
+Productsequenceto= Product Sequence To
