FUT Defects Fixes from Landing and Detail page

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -6,7 +6,7 @@ appDescription=App Description
 Save= Save
 Cancel = Cancel
 Aircraft = Aircraft
-NLP = Normal Line Position Work Center
+NLP = Normal Line Pos Work Center
 
 #XTIT Main view
 NcCreateCopy=NC Create / Copy 
@@ -72,7 +72,7 @@ ProdSeq = Prod Seq.
 Prodorderitem = Prod Order Item
 type = Type
 parent = Parent
-NLP = NLP
+NLP = Normal Line Pos Work Center
 Startdate = Start Date
 EndData = End Date
 IssueQty = Issue Qty.
