FUT Defects Fixes + Disposition VH integration

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -68,8 +68,8 @@ DroppointVH = Drop Point
 POSearch = Production Order Search
 plant = Plant
 Order = Order
-ProdSeq = Prod Seq.
-Prodorderitem = Prod Order Item
+ProdSeq = Aircraft
+Prodorderitem = Operation
 type = Type
 parent = Parent
 NLP = Normal Line Pos Work Center
