FUT defects fixes + Disposition UX integration

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -105,7 +105,7 @@ SelectandProceed = Select and Proceed
 SelectLotNum = Select Lot Number
 
 #XTIT NCCreatedBy
-NCCreatedByTitle = NC Created By
+NCCreatedByTitle = NC Caused By Work Center
 WorkcenterCategory = Work Center Category
 plant = Plant
 Workcenter = Work Center
@@ -115,7 +115,7 @@ language = Language
 Close = Close
 
 #XTIT NCDetectedAt
-NCDetectedAtTitle = NC Detected At
+NCDetectedAtTitle = NC Detected At Work Center
 WorkcenterCategory = Work Center Category
 plant = Plant
 Workcenter = Work Center
