VH table's fixed column layout + Disposition changes

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -34,7 +34,7 @@ SelectBinArea = Select Bin Area
 
 #XTIT componentf4help
 SerialNumTitle = Serial No
-SerianNo = Serial Numbers
+SerialNo = Serial Numbers
 status = Status
 userstatus = User Status
 Ref = Refernce
