FUT Defects Fixes - Disposition + Translatable texts + Routing Changes

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -222,9 +222,9 @@ WorkInstructionTitle = Work Instruction
 
 
 #XTIT Main controller
-ProductionorderWRNodata = No data found.! Please try to search using filter bar fields provided.!
+ProductionorderWRNodata = No data found. Please try to search using filter bar fields provided.!
 MessagematchingPart = No matching order found
-WRSpecifydata = Do you want to specify a Partner Code for this Part?
+PartnerCodeMsg = Do you want to specify a Partner Code for this Part?
 MessagematchingOrder = No matching order found
 LotNumWR = Please select Lot Number to continue!!
 WorkInstrcutionWR = Entered Value exists for Work Instruction
@@ -234,4 +234,40 @@ WRMAndatoryFields = Please Select Mandtory Fields
 WRSelectSubCategory = Please Select Sub Category
 WREnterValueinArea = Please enter a value in In Which Area
 
+#NcheaderControllerMsgBox
+SplDiscMsg = Please Select Discrepancy Number.
+NCSaveTrcMsg = Please enter Serial or Traceability Number.
+NCSaveFieldMsg = Please enter data in all mandatory fields.
 
+SelDiscMsg = Please select a line item to copy Discrepancy details.
+NavToDiscMsg = Please select a line item to navigate to Discrepancy.
+
+NavToDispoMsg = Please select a line item to navigate to Disposition.
+
+TokenUpdateSerNoMsg = Serial Number not available in SAP.
+TokenUpdateTrcNoMsg = Traceability Number not available in SAP.
+
+PartNumMatchMsg = No matching Part master records found.
+DiscPrtNoDetMsg = No matching Part master records found, please contact the responsible team.
+
+MRBCertMsg = Do you wish to go to the other workgroup and save.
+
+MajMinNCMsg = User is not allowed to change the Major/Minor NC.
+
+DispoAddItemMsg = User can add single disposition entry at a time, please use existing line item entry in table.
+
+DispoIncompMsg = User is not allowed to change incomplete flag once the disposition status is Open.
+
+DispoAddLineItemMsg = Please add a line item to create disposition.
+
+SelDiscToCrtDispoMsg = Please select a discrepancy number using dropdown to create a disposition.
+
+QtyChkMsg = One Sub disposition for the selected parent is already in open state, can not create another one.
+
+SelLineItemMsg = Please select a line item first.
+
+SelDispoLineItemMsg = The line item can not be selected since no Disposition Number is generated.
+
+BuyOffAddItemMsg = User can add single buy off entry at a time, please use existing line item entry in table.
+
+SelDiscCancelMsg = Please select a discrepancy to cancel.
