FUT Defects Fixes - Discrepancy & Disposition

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -250,7 +250,7 @@ TokenUpdateTrcNoMsg = Traceability Number not available in SAP.
 PartNumMatchMsg = No matching Part master records found.
 DiscPrtNoDetMsg = No matching Part master records found, please contact the responsible team.
 
-MRBCertMsg = Do you wish to go to the other workgroup and save.
+MRBCertMsg = Do you wish to route to the other workgroup and save.?
 
 MajMinNCMsg = User is not allowed to change the Major/Minor NC.
 
