Discrepancy Master Check + Default Part No + MRB Check + SignOff Code integration + Fixes

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -271,3 +271,11 @@ SelDispoLineItemMsg = The line item can not be selected since no Disposition Num
 BuyOffAddItemMsg = User can add single buy off entry at a time, please use existing line item entry in table.
 
 SelDiscCancelMsg = Please select a discrepancy to cancel.
+
+HeaderSignOffAddItemMsg = User can add single Header Sign Off entry at a time, Please use existing line item entry in table.
+
+DiscSignOffAddItemMsg = User can add single Discrepancy Sign Off entry at a time, Please use existing line item entry in table.
+
+DleteConfirm = Are you sure you want to delete?
+
+NoSeqMessg = Sign Off Line Item without Sequence Number cannot be removed.
